# coding-practice

./: .gitignore  Conway.hs  Main.hs  app.hs
FizzBuzz/ScalaCatsState/: build.sbt
FizzBuzz/ScalaCatsState/src/main/scala/: Application.scala
adventOfCode2021/Day1/: README.md  increasing.scm  tests.scm
adventOfCode2021/Day1/Scheme/: README.md  increasing.scm  tests.scm
adventOfCode2021/Day1/Scheme/libs/scmUnit/src/: conditions.scm
adventOfCode2021/Day2/: Day2.cabal  Main.hs  README.md
adventOfCode2021/Day2/app/: Main.hs
adventOfCode2021/Day2/specs/: Day2Spec.hs
adventOfCode2021/Day2/src/: day2.hs
adventOfCode2021/Day3/: CMakeLists.txt  README.md  build.sh  output.txt
adventOfCode2021/Day3/app/: Day3App.c
adventOfCode2021/Day3/lib/: Day3.c  Day3.h
adventOfCode2021/Day3/specs/: Day3Specs.c
conway/haskell/: .gitignore  CHANGELOG.md  Conway.hs  Main.hs  README.md  conway.cabal
helloWorld/C/: .gitignore  CMakeLists.txt  README.md  build.sh  helloWorld.c  helloWorld.h  helloWorldApp.c  specs.c
helloWorld/Haskell/: helloworld.cabal
helloWorld/Haskell/app/: Main.hs
helloWorld/Haskell/specs/: helloworld-specs.hs
helloWorld/Haskell/src/: helloworld.hs
helloWorld/scheme/: .gitignore  helloworld.scm
