cabal-version: 2.4

name:                Day2
version:             0.1.0.0
maintainer:          JoeSimmonds@users.noreply.github.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library day2-lib
  hs-source-dirs: src
  build-depends:
    base >=4.13 && <4.14,
    mtl
  default-language: Haskell2010
  exposed-modules: Day2
  
executable day2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       
    base >=4.13 && <4.14,
    day2-lib
  default-language:    Haskell2010

Test-Suite day2-specs
  Type:                     exitcode-stdio-1.0
  hs-source-dirs:           specs
  Main-is:                  Day2Spec.hs
  Build-depends:            
    base >= 4.13,
    hspec == 2.9.4,
    day2-lib
  default-language:         Haskell2010